<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/custom_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="10dp"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_marginBottom="10dp"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/trans_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/leftArrow"
            android:src="@drawable/ic_left_arrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:tint="@color/concordiaPurple"/>
        <LinearLayout
            android:id="@+id/trans2_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:gravity="center"
                android:text="Monday"
                android:textStyle="bold"
                android:textSize="33sp"/>

            <TextView
                android:id="@+id/calendarDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:gravity="center"
                android:text="June 20th, 2018"
                android:textStyle=""
                android:textSize="15sp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/rightArrow"
            android:src="@drawable/ic_right_arrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:tint="@color/concordiaPurple"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dining_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/lunch_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="5dp"
            android:background="@drawable/customborder">

            <TextView
                android:id="@+id/lunch_header"
                android:background="@color/concordiaPurple"
                android:textColor="#FFF"
                android:text="@string/lunch_header_text"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/lunch_header"
                >
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lunch_array_text"
                    android:text="@string/lunch_text"
                    android:textSize="22sp"
                    android:textColor="#666666"/>
<!--
                <TextView
                    android:id="@+id/lunch_text"
                    android:text="@string/lunch_text"
                    android:textSize="22sp"
                    android:textColor="#666666"
                    android:lineSpacingMultiplier="1.1"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/lunch_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"/>
-->
            </ScrollView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dinner_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:background="@drawable/customborder">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/dinner_header">

                <TextView
                    android:id="@+id/dinner_text"
                    android:text="@string/dinner_text"
                    android:textSize="22sp"
                    android:textColor="#666666"
                    android:lineSpacingMultiplier="1.1"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/dinner_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"/>

            </ScrollView>

            <TextView
                android:id="@+id/dinner_header"
                android:background="@color/concordiaPurple"
                android:textColor="#FFF"
                android:text="@string/dinner_header_text"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"/>



        </RelativeLayout>
    </LinearLayout>
</LinearLayout>